web/deploy-my-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-php8-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: php8-nginx
  template:
    metadata:
      labels:
        run: php8-nginx
    spec:
      containers:
        - image: docker.io/nginx:1.22.0
          name: php8-nginx
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "8"
              memory: 12Gi
            requests:
              cpu: "4"
              memory: 6Gi
          volumeMounts:
            - mountPath: /var/www/html/
              name: contents
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-config
              subPath: nginx.conf
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /mnt/data/tewin/devphp8
            type: Directory
          name: contents
        - configMap:
            name: php8-configmap-nginx
          name: nginx-config
