web/service-my-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: php8-nginx
  name: php8-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: php8-nginx
  type: ClusterIP
