web/service-my-phpfpm.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: php8-phpfpm
  name: php8-phpfpm
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    run: php8-phpfpm
  type: ClusterIP
